# lattice

./: .gitignore  CONTRIBUTING.md  README  README.md  configurator.bat  mkdocs.yml  modbus_test_script.py  pyproject.toml  requirements.txt  start.bat  start_config.bat  start_debug.bat  test.py
.github/: release-intro.md
.github/workflows/: main.yml
docs/: getting_started.md  index.md  installation.md  preferences.md
docs/daily_notes/: NOTES 10-1-2025.md  NOTES 10-13-2025.md  NOTES 10-16-2025.md  NOTES 10-20-2025.md  NOTES 10-27-2025.md  NOTES 11-3-2025.md
scripts/: store_email_password.py  update_requirements.bat
src/: configurator.py  main.py
src/config/: README.md  default.ini  default.yaml  hardware.yaml  parameters.yaml  theme.yaml
src/core/: modbus_worker.py  serial_worker.py
src/devices/: __init__.py  pressure.py  shutter.py  source.py  sources.py
src/gui/: input_modal_widget.py  main.ui  pressure_control_widget.py  serial_log_widget.py  shutter_control_widget.py  source_control_widget.py  stacked_scrolling_plot_widget.py
src/lattice/: app.py  configurator.py  definitions.py  launcher.py
src/lattice/config/: README.md
src/lattice/devices/: README.md  __init__.py  mock_serial_device.py  pressure_gauge.py  shutter.py  source.py
src/lattice/gui/: __init__.py  preferences_window.py
src/lattice/utils/: __init__.py  config.py  email_alerter.py  timing.py
src/logic/: recipe.py
src/mbe_software/: app.py  configurator.py
src/mbe_software/config/: README.md  alerts.yaml  hardware.yaml  (+1 more)
src/utils/: __init__.py  recipe.py  serial_reader.py
(+76 files in other folders)
